# newscatcher

./: .bash_profile  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
newscatcher/: __init__.py
newscatcher/data/: newscatcher_package_v2.db  package_rss.db
tests/: test_newscatcher.py
